@@ -19,7 +19,7 @@
  *
  *      I kind of modernized this code a bit. -Dianora
  *
- *   $Id: messages.tab,v 1.16 2001/07/02 09:19:45 leeh Exp $
+ *   $Id: messages.tab,v 1.17 2001/11/29 06:16:23 db Exp $
  */
 
 static  char *  replies[] = {
@@ -247,7 +247,7 @@ static  char *  replies[] = {
 /* 221 RPL_UMODEIS, */          ":%s 221 %s %s",
 /* 222 */       (char *)NULL,
 /* 223 */       (char *)NULL,
-/* 224 */       (char *)NULL,
+/* 224 RPL_STATSJLINE */        ":%s 224 %s J %s",
 /* 225 RPL_STATSDLINE*/         ":%s 225 %s %c %s :%s",
 /* 226 */       (char *)NULL,
 /* 227 */       (char *)NULL,
