@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: messages_cust.tab,v 1.15 2001/07/02 09:19:46 leeh Exp $
+ * $Id: messages_cust.tab,v 1.16 2001/11/29 06:16:23 db Exp $
  *
  */
 /* 
@@ -248,7 +248,7 @@ static  char *  replies[] = {
 /* 221 RPL_UMODEIS, */          ":%s 221 %s %s",
 /* 222 */       (char *)NULL,
 /* 223 */       (char *)NULL,
-/* 224 */       (char *)NULL,
+/* 224 RPL_STATSJLINE */        ":%s 224 %s J %s",
 /* 225 RPL_STATSDLINE*/         ":%s 225 %s %c %s :%s",
 /* 226 */       (char *)NULL,
 /* 227 */       (char *)NULL,
